Commit adding new schema

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: registo-horas-service
+  # Certifique-se de que a execução do script está habilitada
+  sql:
+    init:
+      schema-locations: classpath:schema.sql
+      mode: always
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/horasdb}
     username: ${SPRING_DATASOURCE_USERNAME:horas_user}
