--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,15 +7,16 @@ spring:
       schema-locations: classpath:schema.sql
       mode: never
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/horasdb}
-    username: ${SPRING_DATASOURCE_USERNAME:horas_user}
-    password: ${SPRING_DATASOURCE_PASSWORD:horas_pass}
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/horasdb}
+    username: ${PGUSER:horas_user}
+    password: ${PGPASSWORD:horas_pass}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     open-in-view: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   rabbitmq:
     host: ${RABBITMQ_PRIVATE_URL:localhost}   # Se estiver a correr o RabbitMQ localmente
