change out hours 03/12_2

--- a/secretKeys.env
+++ b/secretKeys.env
@@ -4,6 +4,7 @@
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/horasdb
 SPRING_DATASOURCE_USERNAME=horas_user
 SPRING_DATASOURCE_PASSWORD=horas_pass
+SPRING_DATASOURCE_DRIVER=org.postgresql.Driver
 
 RABBITMQ_PRIVATE_URL=localhost
 RABBITMQ_PORT=5672
