implementation aws-> s3 profile

--- a/secretKeys.env
+++ b/secretKeys.env
@@ -11,3 +11,7 @@ RABBITMQ_PORT=5672
 RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest
 
+AWS_ACCESS_KEY=AKIA5NJELGIPGJYZHVXE
+AWS_SECRET_KEY=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
+AWS_REGION=eu-north-1
+
