--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -51,6 +51,18 @@ management:
 server:
   port: ${PORT:8083}
   forward-headers-strategy: native
+cloud:
+  aws:
+    credentials:
+      accessKey: ${AWS_ACCESS_KEY}
+      secretKey: ${AWS_SECRET_KEY}
+    region: ${AWS_REGION}
+aws:
+  s3:
+    bucket-name: treg-profile-bucket-fotos
+
+url:
+  micro-servico-auth: http://localhost:8081/api/auth
 
 springdoc:
   api-docs:
@@ -93,7 +105,8 @@ app:
     tp.project_name,
     u.email,
     tp.required_hours,
-    ROUND(CAST(SUM(r.horas_trabalhadas) AS NUMERIC), 1) AS Total_horas_trabalhadas
+    ROUND(CAST(SUM(r.horas_trabalhadas) AS NUMERIC), 1) AS Total_horas_trabalhadas,
+   u.profile_picture_url
 FROM
     auth.tb_users u
 INNER JOIN
@@ -101,6 +114,6 @@ INNER JOIN
 INNER JOIN
     auth.tb_projetos tp ON u.username = tp.username
 WHERE
-    u.username = :username
+    u.username =:username
 GROUP BY
-    u.username, u.email, tp.required_hours, tp.project_name"
+    u.username, u.email, tp.required_hours, tp.project_name,u.profile_picture_url"
