implementation aws-> s3 profile

--- a/secretKeys.env
+++ b/secretKeys.env
@@ -15,3 +15,4 @@ AWS_ACCESS_KEY=AKIA5NJELGIPGJYZHVXE
 AWS_SECRET_KEY=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
 AWS_REGION=eu-north-1
 
+URL_AUTH=http://localhost:8081/api/auth
