--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -66,7 +66,7 @@ aws:
     bucket-name: treg-profile-bucket-fotos
 
 url:
-  micro-servico-auth: http://localhost:8081/api/auth
+  micro-servico-auth: ${URL_AUTH}
 
 springdoc:
   api-docs:
