--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -62,7 +62,7 @@ aws:
     bucket-name: treg-profile-bucket-fotos
 
 url:
-  micro-servico-auth: ${URL_AUTH}
+  micro-servico-auth: ${URI_AUTH_SERVICE}
 
 springdoc:
   api-docs:
