implementation aws-> s3 profile 3

--- a/secretKeys.env
+++ b/secretKeys.env
@@ -14,5 +14,7 @@ RABBITMQ_DEFAULT_PASS=guest
 AWS_ACCESS_KEY=AKIA5NJELGIPGJYZHVXE
 AWS_SECRET_KEY=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
 AWS_REGION=eu-north-1
+AWS_S3_FOLDER_NAME=profile_pics/dev
+AWS_S3_BUCKET_NAME=treg-profile-bucket-fotos
 
-URL_AUTH=http://localhost:8081/api/auth
+URI_AUTH_SERVICE=http://localhost:8081/api/auth
