--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -63,10 +63,11 @@ cloud:
     region: ${AWS_REGION}
 aws:
   s3:
-    bucket-name: treg-profile-bucket-fotos
+    bucket-name: ${AWS_S3_BUCKET_NAME}
+    folder-name: ${AWS_S3_FOLDER_NAME}
 
 url:
-  micro-servico-auth: ${URL_AUTH}
+  micro-servico-auth: ${URI_AUTH_SERVICE}
 
 springdoc:
   api-docs:
