adding create trinning plan

--- a/secretKeys.env
+++ b/secretKeys.env
@@ -11,10 +11,13 @@ RABBITMQ_PORT=5672
 RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest
 
-AWS_ACCESS_KEY=AKIA5NJELGIPCMYY2UJ6
-AWS_SECRET_KEY=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
+AWS_ACCESS_KEY=AKIA5NJELGIPLY2TZOVB
+AWS_SECRET_KEY=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
 AWS_REGION=eu-north-1
 AWS_S3_FOLDER_NAME=profile-pics/dev/
 AWS_S3_BUCKET_NAME=treg-profile-bucket-fotos
 
 URI_AUTH_SERVICE=http://localhost:8081/api/auth
+
+AI_API_BASE_URL=https://generativelanguage.googleapis.com
+AI_API_KEY=AIzaSyA16_4rcn_O_i3IC2yfPR8b7E0KMdEA4eY
