--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ target/
 *.iws
 *.iml
 *.ipr
-*.env
 
 ### NetBeans ###
 /nbproject/private/
@@ -32,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Security and Environment Configs ###
+secretkeys.env
+.env
