--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -85,8 +85,15 @@ springdoc:
 
 logging:
   level:
-    org.springframework.security: INFO
-    com.registo.horas_estagio: INFO
+    org:
+      springframework:
+        security:
+          web:
+            ObservationFilterChainDecorator: ERROR
+            FilterChainProxy: ERROR
+    com:
+      registo:
+        horas_estagio: INFO
     org.flywaydb: INFO
   file:
     name: logs/app.log
