limpeza de mitos logs 4

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -47,7 +47,7 @@ management:
         include: health,info,metrics,prometheus,env,beans
   endpoint:
     health:
-      show-details: never
+      show-details: always
   health:
     mail:
       enabled: false
