--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-      default-schema: registos
     show-sql: true
     open-in-view: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -44,7 +43,7 @@ spring:
         static: ${AWS_REGION}
       s3:
         bucket-name: ${AWS_S3_BUCKET_NAME}
-        folder-name: ${AWS_S3_FOLDER_NAME}
+        folder-name: ${AWS_S3_FOLDER_NAME} # usava quando a ler gemini pa os jogos
 
   flyway:
     enabled: false
@@ -68,7 +67,7 @@ server:
   forward-headers-strategy: native
 
 url:
-  micro-servico-auth: ${URI_AUTH_SERVICE}
+  micro_service_auth: ${URI_AUTH_SERVICE}
 
 springdoc:
   api-docs:
@@ -107,9 +106,10 @@ gcp:
   credentials:
     json-content: ${GCP_CREDENTIALS_JSO_CONTENT}
 
-FootballData:
-  url: https://api.football-data.org/v4
-  API_TOKEN: ddaffc67601e45eabfb56b549d424fbd
+Football:
+  Data:
+    url: ${FOOTBALL_DATA_URL}
+    API_TOKEN: ${FOOTBALL_DATA_API_TOKEN}
 
 
 app:
