--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,7 +6,9 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
+  jackson:
+    deserialization:
+      fail-on-unknown-properties: false #"Se receberes um campo que não conheces, apenas ignora-o e continua
   sql:
     init:
       schema-locations: classpath:schema.sql
