--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -125,8 +125,8 @@ telegram:
   chatId: ${TELEGRAM_CHAT_ID}
   telegramUrl: ${TELEGRAM_URL}
 
-
 app:
+  base-url: ${APP_BASE_URL}
   queries:
     monthly-summary: "SELECT 
     TO_CHAR(data_registo, 'YYYY-MM') AS mes_e_ano, 
