--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,23 @@
             <artifactId>microsoft-graph</artifactId>
             <version>5.80.0</version>
         </dependency>
+
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambots-meta</artifactId>
+                <version>7.10.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambots-longpolling</artifactId>
+                <version>7.10.0</version>
+            </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-client</artifactId>
+            <version>7.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
